--- a/Tarefas/src/Tarefas.Web/Tarefas.Web.csproj
+++ b/Tarefas/src/Tarefas.Web/Tarefas.Web.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tarefas.DTO\Tarefas.DTO.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
